@@ -33,7 +33,10 @@
 
 #define OBJ_UNTYPED	0x0		/* partial: don't know */
 #define	OBJ_RESOURCE	0x1
-#define OBJ_LITERAL	0x2
+#define OBJ_STRING	0x2
+#define OBJ_INTEGER	0x3
+#define OBJ_DOUBLE	0x4
+#define OBJ_TERM	0x5
 
 #define BY_NONE	0x00			/* 0 */
 #define BY_S	0x01			/* 1 */
@@ -51,11 +54,11 @@
 
 #define NO_LINE	((unsigned long)-1L)
 
-#define MATCH_CASE	0x0		/* Default: perfect match */
-#define	MATCH_EXACT	0x1		/* case-insensitive */
-#define	MATCH_SUBSTRING	0x2		/* substring */
-#define	MATCH_WORD	0x3		/* whole word */
-#define	MATCH_PREFIX	0x4		/* prefix */
+#define STR_MATCH_CASE		0x0	/* Default: perfect match */
+#define	STR_MATCH_EXACT		0x1	/* case-insensitive */
+#define	STR_MATCH_SUBSTRING	0x2	/* substring */
+#define	STR_MATCH_WORD		0x3	/* whole word */
+#define	STR_MATCH_PREFIX	0x4	/* prefix */
 
 typedef struct cell
 { void *	value;			/* represented resource */
@@ -98,17 +101,26 @@ typedef struct source
 typedef struct triple
 { atom_t	subject;
   predicate*	predicate;
-  atom_t	object;
+  union
+  { atom_t	resource;
+    atom_t	string;
+    long	integer;
+    double	real;
+    struct
+    { record_t  record;
+      int       len;
+    } term;				/* external record */
+  } object;
   atom_t	source;			/* where it comes from */
   struct triple*next[INDEX_TABLES];	/* hash-table next links */
-  unsigned	objtype : 2;
+  unsigned	objtype : 3;
   unsigned	indexed : 3;		/* Partials: BY_* */
   unsigned	erased  : 1;		/* If TRUE, triple is erased */
   unsigned	first   : 1;		/* I'm the first on subject */
   unsigned	match   : 3;		/* How to match literals */
   unsigned	inversed : 1;		/* Partials: using inverse match */
   unsigned	is_duplicate : 1;	/* I'm a duplicate */
-  unsigned	duplicates : 20;	/* Duplicate count */
+  unsigned	duplicates : 19;	/* Duplicate count */
   unsigned long line;			/* source-line number */
 } triple;
 
