@@ -1,3 +1,8 @@
+Apr 22, 2004
+
+  * ADDED: Support for arbitrary Prolog values for `Object'.  This will be
+    used to support xml:lang, rdf:dataType and XML literals.
+
 Apr 11, 2004
 
   * FIXED: rdf:parseType="Collection": XML attribute value _always_ requires
